src/snapshots/afrotd__parser__tests__interpretation_html_3.3.6_3.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 3.3.6.III
        </p>
    </div>
    <div class="message-body">
        <p>
            Auf B52’s Trikot befinden sich Blutspritzer.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Sofern ein Schiedsrichter festgestellt, dass das Trikot nicht
                mit Blut durchtränkt ist, kann B52 im Spiel verbleiben
                (Beachte: Durchtränkt wird definiert als von Feuchtigkeit
                durchdrungen. Wenn Blut durch das Gewebe auf die Haut gelangt
                oder auf einen anderen Spieler oder Schiedsrichter übertragen
                werden kann, ist das Gewebe durchtränkt.).
            </p>
        </details>
    </div>
</article>
