src/snapshots/afrotd__parser__tests__interpretation_html_3.3.6_6.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 3.3.6.VI
        </p>
    </div>
    <div class="message-body">
        <p>
            Während der Ball dead ist, bemerkt A85, dass er einen blutenden
            Schnitt am Arm hat. Er geht freiwillig zur Teamzone und wird durch
            A88 ersetzt.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Das ist eine legale Auswechselung, die keine Auswirkung auf die
                Game Clock hat. A85 kann in das Spiel zurückkehren, nachdem die
                Wunde behandelt wurde, aber er muss die Regeln bezüglich einer
                Auswechselung beachten.
            </p>
        </details>
    </div>
</article>
