src/snapshots/afrotd__parser__tests__interpretation_html_3.4.2_1.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 3.4.2.I
        </p>
    </div>
    <div class="message-body">
        <p>
            Nach einem Timeout ist eines der beiden Teams nicht bereit zu
            spielen.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Illegale Spielverzögerung. Strafe – 5 Meter vom Succeeding
                Spot.
            </p>
        </details>
    </div>
</article>
